Split ghapi package and update command structure
Major Enhancements:
- Introduced DataFetchConfig for fine-grained API data fetching control with feature flags
- Added versioning support to the application, allowing for build-time overrides
- Created new output formatting package for consistent terminal output
- Simplified command structure: removed 'run' subcommand, now uses 'gh stats' directly
- Removed redundant --resume flag (automatic resume is now always enabled)

Code Organization:
- Restructured ghapi package with domain-prefixed naming (core_*, graphql_*, orgs_*, repos_*)
- Renamed files for clarity: repos_config.go → repos_types.go, orgs_organizations.go → orgs_metadata.go
- Split client.go into focused modules: pagination, ratelimit, rest, retry, types
- Refactored graphql.go, repositories.go, and organizations.go for better separation of concerns

Data Collection Improvements:
- Enhanced organization metadata display with improved formatting and additional details
- Added support for skipping team access data fetching to optimize API usage (--no-teams)
- Improved package data fetching with detailed summaries and breakdowns by type
- Enhanced GraphQL batching for reduced API calls (46% reduction in minimal mode)

Developer Experience:
- Refined dry-run mode to provide clearer insights into data collection without API calls
- Improved error handling and user feedback during processing phases
- Enhanced validation for organization names to ensure compliance with GitHub's rules
- Updated all CLI flags with clearer descriptions and consistent formatting
- Standardized terminology: "gh stats" in documentation, "gh-stats" for project/command names

Documentation:
- Added comprehensive package comments to all 24 Go files (100% compliance with Go doc standards)
- Updated README with accurate data collection details and cleaner structure
- Fixed architecture diagram to reflect actual code flow
- Updated token scopes to match current requirements
- Added proper pha

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,7 +33,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v2.6.0
+          version: latest
           args: --timeout=5m
 
   format:
@@ -54,3 +54,24 @@ jobs:
             gofmt -d .
             exit 1
           fi
+
+  cyclomatic-complexity:
+    name: Cyclomatic Complexity
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v5
+      - uses: actions/setup-go@v6
+        with:
+          go-version: '1.24'
+          cache: true
+      - name: Install gocyclo
+        run: go install github.com/fzipp/gocyclo/cmd/gocyclo@latest
+      - name: Check cyclomatic complexity
+        run: |
+          gocyclo -over 15 . || {
+            echo "Functions with cyclomatic complexity over 15 found"
+            echo "Please refactor complex functions to improve maintainability"
+            exit 1
+          }
