--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+      
       - uses: cli/gh-extension-precompile@v2
         with:
           go_version: "1.24"
+        env:
+          # Inject version from git tag into binary (keeps 'v' prefix)
+          PRECOMPILE_GO_LDFLAGS: "-X main.Version=${{ github.ref_name }}"
